testes com pandas

--- a/Vereadores RJ 2016 - Votos por Zona.ipynb
+++ b/Vereadores RJ 2016 - Votos por Zona.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,15 @@
     "\n",
     "import csv\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,8 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -786,7 +791,7 @@
        "[97 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,15 +801,13 @@
     "zonas = ver.groupby(['NR_ZONA']).count()\n",
     "zonas\n",
     "\n",
-    "\n",
-    "\n",
     "# zona = ver.loc[ver['NR_ZONA'] == '1']\n",
     "# zona.sort_values(['QT_VOTOS_NOMINAIS'], ascending=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,6 +817,86 @@
     "\n",
     "vot_f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NM_MUNICIPIO</th>\n",
+       "      <th>NR_ZONA</th>\n",
+       "      <th>DS_CARGO</th>\n",
+       "      <th>NM_URNA_CANDIDATO</th>\n",
+       "      <th>NR_PARTIDO</th>\n",
+       "      <th>SG_PARTIDO</th>\n",
+       "      <th>DS_SIT_TOT_TURNO</th>\n",
+       "      <th>QT_VOTOS_NOMINAIS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RIO DE JANEIRO</td>\n",
+       "      <td>214</td>\n",
+       "      <td>Vereador</td>\n",
+       "      <td>TARCÍSIO MOTTA</td>\n",
+       "      <td>50</td>\n",
+       "      <td>PSOL</td>\n",
+       "      <td>ELEITO POR QP</td>\n",
+       "      <td>1594</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     NM_MUNICIPIO  NR_ZONA  DS_CARGO NM_URNA_CANDIDATO  NR_PARTIDO SG_PARTIDO  \\\n",
+       "0  RIO DE JANEIRO      214  Vereador    TARCÍSIO MOTTA          50       PSOL   \n",
+       "\n",
+       "  DS_SIT_TOT_TURNO  QT_VOTOS_NOMINAIS  \n",
+       "0    ELEITO POR QP               1594  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ver_rj = pd.read_csv(\"output/votacao_filtro_munzona_2016_RJ.csv\", encoding=\"latin-1\")\n",
+    "vr = pd.DataFrame(ver_rj)\n",
+    "cand = vr.groupby(['NM_URNA_CANDIDATO']).count()\n",
+    "\n",
+    "vr.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
